# Prog3_Lect

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
01_HelloWorld/: helloworld.cpp
02a_CStyleStructs/: main.cpp  readme.md
02b_CppStyleStructs/: CMakeLists.txt  main.cpp  readme.md
03a_Classes/: main.cpp  readme.md
04a_ClassHierarchie/: CMakeLists.txt  main.cpp  readme.md  uml.md  uml.puml
04a_ClassHierarchie/include/: IPhotoDevice.h  camera.h  digitalcamera.h  event.h  filmcamera.h  photographer.h  smartphone.h
04a_ClassHierarchie/src/: camera.cpp  digitalcamera.cpp  event.cpp  filmcamera.cpp  photographer.cpp  smartphone.cpp
05a_StandardLib/: CMakeLists.txt  main.cpp  readme.md
05a_StandardLib/include/: FilmLab.h  Order.h
05a_StandardLib/src/: FilmLab.cpp  Order.cpp
06a_Templates/: CMakeLists.txt  main.cpp  readme.md
06b_DynamicMemory/: CMakeLists.txt  main.cpp
